<resources>
    <string name="app_name">EDOR</string>
    <string name="splash_screen_tie_logo">Splash Screen Tie Logo</string>
    <string name="add_resource">Add Resource</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grab_resources">GRAB RESOURCES!</string>
    <string name="choose_course">Choose Course</string>
    <string name="manage_your_time">MANAGE YOUR TIME</string>
    <string name="choose_day">Choose Day</string>

    <string-array name="courses">
        <item>Software for Mobile</item>
        <item>Artificial Intelligence</item>
    </string-array>

</resources>