<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2AA6CE"
    tools:context=".Resources"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/grab_resources"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Dropdown_resources"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:boxBackgroundColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_resources"
        app:startIconTint="@color/cardview_dark_background"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextViewResources"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:inputType="none"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/choose_course"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="400dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton5"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/bottom_navigation"
            android:layout_centerInParent="true"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:contentDescription="@string/add_resource"
            app:srcCompat="@drawable/ic_addresource"
            tools:ignore="ImageContrastCheck"
            android:focusable="true" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_menu"
        android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</LinearLayout>