<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2AA6CE"
    android:orientation="vertical"
    tools:context=".Timetable">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/manage_your_time"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:theme="@style/BlackBorderAdjust"
        android:id="@+id/Dropdown_timetable"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:boxBackgroundColor="@color/white"
        app:startIconDrawable="@drawable/ic_timetable"
        app:startIconTint="@color/cardview_dark_background">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextViewTimetable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:inputType="none"
            android:labelFor="@id/autoCompleteTextViewTimetable"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/choose_day"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scheduleRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="20dp">

    </androidx.recyclerview.widget.RecyclerView>

    <EditText
        android:id="@+id/course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:minHeight="48dp"
        android:padding="10dp"
        android:hint="Course"
        android:maxLength="30"
        android:textColorHint="@color/cardview_dark_background"
        android:textColor="@color/black" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/start_time"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/white"
            android:text="Start Time"
            android:textColor="@color/black"

            />
        <Button
            android:id="@+id/end_time"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_marginRight="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="End Time"

            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_time"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/bottom_navigation"
            android:layout_centerInParent="true"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:contentDescription="@string/add_resource"
            app:srcCompat="@drawable/ic_addresource"
            tools:ignore="ImageContrastCheck"
            android:focusable="true" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFF"
            app:itemIconTint="@color/black"
            app:itemTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_menu"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</LinearLayout>